Started adjusting model